--- a/Genome/유전체_실전.ipynb
+++ b/Genome/유전체_실전.ipynb
@@ -60,7 +60,7 @@
       "source": [
         "def seed_everything(seed):\n",
         "    random.seed(seed)\n",
-        "    os.environ['PYTHONHASHSEED'] = str(seed)         # 뭐야이거뭔데ㅜ >> 환경변수 읽어오는 어쩌고저쩌고\n",
+        "    os.environ['PYTHONHASHSEED'] = str(seed)         # ?? >> 환경변수 읽어오는 역할\n",
         "    np.random.seed(seed)\n",
         "seed_everything(CFG.SEED) # Seed 고정"
       ]
@@ -1330,7 +1330,7 @@
         "        df_y = df['class']                                                       # class를 y,label로 지정!!\n",
         "        return df_x, df_y\n",
         "    else:\n",
-        "        df_x = df.drop(columns=['id', 'father', 'mother', 'gender'])    # else를 왜 했나 했더니, test를 여기에 넣으려고 했구만!, test에는 class가 없어서 에러나 날 테니까~ㄷ\n",
+        "        df_x = df.drop(columns=['id', 'father', 'mother', 'gender'])    #test에는 class가 없어서 에러나기 떄문에 방지하기 위한 함수\n",
         "        return df_x"
       ]
     },
@@ -5317,6 +5317,111 @@
           "execution_count": 189
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GridSearchCV 검증\n"
+      ],
+      "metadata": {
+        "id": "xZOpApGgVlwE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import GridSearchCV"
+      ],
+      "metadata": {
+        "id": "U6HCxFBNVlMt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parameters = {'max_depth': [1,2,3]}"
+      ],
+      "metadata": {
+        "id": "G-DGWCDs8icL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h4kuuWn4V94M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 제출"
+      ],
+      "metadata": {
+        "id": "x8OrZDQ512hG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sb99 = pd.read_csv('/content/drive/MyDrive/메가스터디IT (산대특)/데이콘/유전체/SUBIN7.csv')"
+      ],
+      "metadata": {
+        "id": "b_LR8GiEVBWs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ad = np.where(sb99 != df1)\n",
+        "ad"
+      ],
+      "metadata": {
+        "id": "FVqIyeKv2MgQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "submit = pd.read_csv('/content/drive/MyDrive/메가스터디IT (산대특)/데이콘/유전체/sample_submission.csv')"
+      ],
+      "metadata": {
+        "id": "kHGAXf2R13sa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "submit['class'] = class_le.inverse_transform(preds2)"
+      ],
+      "metadata": {
+        "id": "76TLEwsl2JT1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "submit.to_csv('/content/drive/MyDrive/메가스터디IT (산대특)/데이콘/유전체/submit.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "6fV1BMRF2K7K"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
