--- a/Genome/유전체_실전.ipynb
+++ b/Genome/유전체_실전.ipynb
@@ -46,7 +46,7 @@
       },
       "outputs": [],
       "source": [
-        "class CFG:                      # 시드고정 왜 하는거지?\n",
+        "class CFG:                      # 시드고정 왜 하는거지?  >> 난수 발생시, 그 값을 고정해두기 위해서 (계속 바뀌면, 평가가 어렵기 때문)\n",
         "    SEED = 42"
       ]
     },
@@ -5357,13 +5357,20 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 제출"
-      ],
-      "metadata": {
-        "id": "x8OrZDQ512hG"
-      }
     }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
